--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
           <svg class="spark" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
             <path d="M12 2v20M2 12h20M5.5 5.5l13 13M18.5 5.5l-13 13" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
           </svg>
-          개인·법인사업자 저금리 정책자금 대출컨설팅
+          개인·법인 사업자 최대한도&최저금리 정책자금 솔루션
         </span>
 
-        <h1 class="title">정부 정책자금</h1>
-
+        <h1 class="title">2025년 하반기 경기도 정부 정책자금</h1>
         <p class="lead">
-          대표님께 희망을 드리고 성공하기 위한 최고의 파트너. <br/>
-          연 <strong>2% ~ 4%</strong>대, 만 20세 이상, 세금 연체 없는 <strong>사업자라면 누구나</strong> 상담 가능합니다. <br/>
-          자금한도는 <strong>최대 30억</strong>까지 컨설팅해드립니다.
+          대표님의 성공을 위해 희망과 해답을 드리는 파트너.<br/>
+          <span style="font-size:22px;">금리 최저 <b>연 2%</b></span><br>
+          <span style="font-size:22px;">상환기간 최대 <b>10년</b></span><br>
+          <span style="font-size:22px;">자금한도 최대 <b>5억</b></span>
         </p>
 
         <div class="bullets" role="list">
@@ -55,32 +55,32 @@
             <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
               <path d="M20 6l-11 11-5-5" fill="none" stroke="#1f5fae" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-            <div>낮은 금리로 <strong>운영·시설자금</strong> 모두 지원</div>
+            <div><strong>세금, 연체없는 사업자</strong>라면 누구나!</div>
           </div>
           <div class="bullet" role="listitem">
             <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
               <path d="M20 6l-11 11-5-5" fill="none" stroke="#1f5fae" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-            <div>맞춤형 <strong>서류 준비 가이드</strong> & 빠른 진행</div>
+            <div>신용점수 <strong>700점 이상(NICE)</strong> 기준</div>
           </div>
           <div class="bullet" role="listitem">
             <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
               <path d="M20 6l-11 11-5-5" fill="none" stroke="#1f5fae" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-            <div>전문 컨설턴트 <strong>1:1 케어</strong>로 실패 리스크 절감</div>
+            <div>사업자 개설 <strong>3개월 이상 &매출발생</strong></div>
           </div>
         </div>
 
-        <div class="ctas">
+        <!--<div class="ctas">
           <button class="btn btn-primary" id="reqConsult">무료 상담 요청</button>
           <button class="btn btn-ghost" id="seeMore">자세히 보기</button>
         </div>
 
         <div class="chips" aria-label="주요 혜택">
           <span class="chip">연 2%~4%대</span>
-          <span class="chip">최대 30억 한도</span>
+          <span class="chip">최대 5억 한도</span>
           <span class="chip">만 20세 이상</span>
-        </div>
+        </div>-->
       </div>
     </div>
 
