--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
               <div class="ts__right">
                 <div class="ts__photoWrap">
-                  <img src="./img/img0001.png" alt="프랜차이즈 실장 프로필" class="ts__photo">
+                  <img src="./img/ts001.png" alt="프랜차이즈 실장 프로필" class="ts__photo">
                 </div>
                 <div class="ts__chartWrap">
                   <div class="ts__miniChart" aria-hidden="true">
