--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                   <div class="ts__miniChart" aria-hidden="true">
                     <div class="ts__bar ts__bar--before"><span>진단 전</span></div>
                     <div class="ts__bar ts__bar--after"><span>진단 후</span>
-                      <em class="ts__badge">승인율<br><b>90%+</b></em>
+                      <em class="ts__badge">자금 승인율<br><b>90%+</b></em>
                     </div>
                   </div>
                 </div>
@@ -176,7 +176,7 @@
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
               <div class="ts__right">
                 <div class="ts__photoWrap">
-                  <img src="./img/img002.png" alt="법률 서비스 상담 장면" class="ts__photo">
+                  <img src="./img/ts002.png" alt="법률 서비스 상담 장면" class="ts__photo">
                 </div>
                 <div class="ts__chartWrap">
                   <div class="ts__miniChart" aria-hidden="true">
