--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                   <div class="ts__miniChart" aria-hidden="true">
                     <div class="ts__bar ts__bar--before"><span>진단 전</span></div>
                     <div class="ts__bar ts__bar--after"><span>진단 후</span>
-                      <em class="ts__badge">자금 승인율<br><b>90%+</b></em>
+                      <em class="ts__badge">자금<br>승인율<br><b>90%+</b></em>
                     </div>
                   </div>
                 </div>
