--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <div class="ts__viewport">
         <ul class="ts__track">
           <!-- ========== Slide 1 ========== -->
-          <li class="ts__slide" aria-label="치킨 가맹본부 실장 후기" id="slide-1">
+          <li class="ts__slide" aria-label="세림 정밀OO (김XX 대표님) 후기" id="slide-1">
             <div class="ts__grid">
               <!-- 왼쪽 큰 박스: 위/아래 텍스트 시작선과 폭 통일 -->
               <div class="ts__copy">
@@ -139,7 +139,7 @@
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
               <div class="ts__right">
                 <div class="ts__photoWrap">
-                  <img src="./img/ts001.png" alt="프랜차이즈 실장 프로필" class="ts__photo">
+                  <img src="./img/ts001.png" class="ts__photo">
                 </div>
                 <div class="ts__chartWrap">
                   <div class="ts__miniChart" aria-hidden="true">
@@ -153,7 +153,7 @@
             </div>
           </li>
           <!-- ========== Slide 2 ========== -->
-          <li class="ts__slide" aria-label="법무법인 대표 변호사 후기" id="slide-2">
+          <li class="ts__slide" aria-label="카페 모OO (박XX 대표님) 후기" id="slide-2">
             <div class="ts__grid">
             <!-- 왼쪽 큰 박스: 위/아래 텍스트 시작선과 폭 통일 -->
               <div class="ts__copy">
@@ -176,13 +176,13 @@
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
               <div class="ts__right">
                 <div class="ts__photoWrap">
-                  <img src="./img/ts002.png" alt="법률 서비스 상담 장면" class="ts__photo">
+                  <img src="./img/ts002.png" class="ts__photo">
                 </div>
                 <div class="ts__chartWrap">
                   <div class="ts__miniChart" aria-hidden="true">
                     <div class="ts__bar ts__bar--before"><span>진단 전</span></div>
                     <div class="ts__bar ts__bar--after"><span>진단 후</span>
-                      <em class="ts__badge">승인율<br><b>93%+</b></em>
+                      <em class="ts__badge">자금<br>승인율<br><b>93%+</b></em>
                     </div>
                   </div>
                 </div>
@@ -190,7 +190,7 @@
             </div>
           </li>
           <!-- ========== Slide 3 ========== -->
-          <li class="ts__slide" aria-label="성형외과 원장 후기" id="slide-3">
+          <li class="ts__slide" aria-label="넥스트OO (이XX 대표님) 후기" id="slide-3">
             <div class="ts__grid">
             <!-- 왼쪽 큰 박스: 위/아래 텍스트 시작선과 폭 통일 -->
               <div class="ts__copy">
@@ -213,13 +213,13 @@
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
               <div class="ts__right">
                 <div class="ts__photoWrap">
-                  <img src="./img/img003.png" alt="의료 서비스 상담 장면" class="ts__photo">
+                  <img src="./img/ts003.png"  class="ts__photo">
                 </div>
                 <div class="ts__chartWrap">
                   <div class="ts__miniChart" aria-hidden="true">
                     <div class="ts__bar ts__bar--before"><span>진단 전</span></div>
                     <div class="ts__bar ts__bar--after"><span>진단 후</span>
-                      <em class="ts__badge">승인율<br><b>91%+</b></em>
+                      <em class="ts__badge">자금<br>승인율<br><b>91%+</b></em>
                     </div>
                   </div>
                 </div>
@@ -227,7 +227,7 @@
             </div>
           </li>
           <!-- ========== Slide 4 ========== -->
-          <li class="ts__slide" aria-label="성형외과 원장 후기" id="slide-4">
+          <li class="ts__slide" aria-label="브레인OO학원 후기" id="slide-4">
             <div class="ts__grid">
             <!-- 왼쪽 큰 박스: 위/아래 텍스트 시작선과 폭 통일 -->
               <div class="ts__copy">
@@ -251,13 +251,13 @@
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
               <div class="ts__right">
                 <div class="ts__photoWrap">
-                  <img src="./img/img003.png" alt="의료 서비스 상담 장면" class="ts__photo">
+                  <img src="./img/ts004.png" class="ts__photo">
                 </div>
                 <div class="ts__chartWrap">
                   <div class="ts__miniChart" aria-hidden="true">
                     <div class="ts__bar ts__bar--before"><span>진단 전</span></div>
                     <div class="ts__bar ts__bar--after"><span>진단 후</span>
-                      <em class="ts__badge">승인율<br><b>92%+</b></em>
+                      <em class="ts__badge">자금<br>승인율<br><b>92%+</b></em>
                     </div>
                   </div>
                 </div>
@@ -265,7 +265,7 @@
             </div>
           </li>
           <!-- ========== Slide 5 ========== -->
-          <li class="ts__slide" aria-label="성형외과 원장 후기" id="slide-5">
+          <li class="ts__slide" aria-label="한빛로OO스틱스 (최XX 대표님) 후기" id="slide-5">
             <div class="ts__grid">
             <!-- 왼쪽 큰 박스: 위/아래 텍스트 시작선과 폭 통일 -->
               <div class="ts__copy">
@@ -288,13 +288,13 @@
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
               <div class="ts__right">
                 <div class="ts__photoWrap">
-                  <img src="./img/img003.png" alt="의료 서비스 상담 장면" class="ts__photo">
+                  <img src="./img/ts005.png"  class="ts__photo">
                 </div>
                 <div class="ts__chartWrap">
                   <div class="ts__miniChart" aria-hidden="true">
                     <div class="ts__bar ts__bar--before"><span>진단 전</span></div>
                     <div class="ts__bar ts__bar--after"><span>진단 후</span>
-                      <em class="ts__badge">승인율<br><b>96%+</b></em>
+                      <em class="ts__badge">자금<br>승인율<br><b>96%+</b></em>
                     </div>
                   </div>
                 </div>
@@ -302,7 +302,7 @@
             </div>
           </li>
           <!-- ========== Slide 6 ========== -->
-          <li class="ts__slide" aria-label="성형외과 원장 후기" id="slide-6">
+          <li class="ts__slide" aria-label="라벨르OO메틱 (한XX 대표님) 후기" id="slide-6">
             <div class="ts__grid">
             <!-- 왼쪽 큰 박스: 위/아래 텍스트 시작선과 폭 통일 -->
               <div class="ts__copy">
@@ -326,13 +326,13 @@
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
               <div class="ts__right">
                 <div class="ts__photoWrap">
-                  <img src="./img/img003.png" alt="의료 서비스 상담 장면" class="ts__photo">
+                  <img src="./img/ts006.png"  class="ts__photo">
                 </div>
                 <div class="ts__chartWrap">
                   <div class="ts__miniChart" aria-hidden="true">
                     <div class="ts__bar ts__bar--before"><span>진단 전</span></div>
                     <div class="ts__bar ts__bar--after"><span>진단 후</span>
-                      <em class="ts__badge">승인율<br><b>94%+</b></em>
+                      <em class="ts__badge">자금<br>승인율<br><b>94%+</b></em>
                     </div>
                   </div>
                 </div>
@@ -340,7 +340,7 @@
             </div>
           </li>
           <!-- ========== Slide 7 ========== -->
-          <li class="ts__slide" aria-label="성형외과 원장 후기" id="slide-7">
+          <li class="ts__slide" aria-label="대성OO설 (윤XX 대표님) 후기" id="slide-7">
             <div class="ts__grid">
             <!-- 왼쪽 큰 박스: 위/아래 텍스트 시작선과 폭 통일 -->
               <div class="ts__copy">
@@ -363,13 +363,13 @@
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
               <div class="ts__right">
                 <div class="ts__photoWrap">
-                  <img src="./img/img003.png" alt="의료 서비스 상담 장면" class="ts__photo">
+                  <img src="./img/ts007.png"  class="ts__photo">
                 </div>
                 <div class="ts__chartWrap">
                   <div class="ts__miniChart" aria-hidden="true">
                     <div class="ts__bar ts__bar--before"><span>진단 전</span></div>
                     <div class="ts__bar ts__bar--after"><span>진단 후</span>
-                      <em class="ts__badge">승인율<br><b>91%+</b></em>
+                      <em class="ts__badge">자금<br>승인율<br><b>91%+</b></em>
                     </div>
                   </div>
                 </div>
@@ -377,7 +377,7 @@
             </div>
           </li>
           <!-- ========== Slide 8 ========== -->
-          <li class="ts__slide" aria-label="성형외과 원장 후기" id="slide-8">
+          <li class="ts__slide" aria-label="레스토랑 미OO (장XX 대표님) 후기" id="slide-8">
             <div class="ts__grid">
             <!-- 왼쪽 큰 박스: 위/아래 텍스트 시작선과 폭 통일 -->
               <div class="ts__copy">
@@ -401,13 +401,13 @@
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
               <div class="ts__right">
                 <div class="ts__photoWrap">
-                  <img src="./img/img003.png" alt="의료 서비스 상담 장면" class="ts__photo">
+                  <img src="./img/ts008.png"  class="ts__photo">
                 </div>
                 <div class="ts__chartWrap">
                   <div class="ts__miniChart" aria-hidden="true">
                     <div class="ts__bar ts__bar--before"><span>진단 전</span></div>
                     <div class="ts__bar ts__bar--after"><span>진단 후</span>
-                      <em class="ts__badge">승인율<br><b>95%+</b></em>
+                      <em class="ts__badge">자금<br>승인율<br><b>95%+</b></em>
                     </div>
                   </div>
                 </div>
@@ -415,7 +415,7 @@
             </div>
           </li>
           <!-- ========== Slide 9 ========== -->
-          <li class="ts__slide" aria-label="성형외과 원장 후기" id="slide-9">
+          <li class="ts__slide" aria-label="오븐치OO하우스 (오XX 대표님) 후기" id="slide-9">
             <div class="ts__grid">
             <!-- 왼쪽 큰 박스: 위/아래 텍스트 시작선과 폭 통일 -->
               <div class="ts__copy">
@@ -439,13 +439,13 @@
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
               <div class="ts__right">
                 <div class="ts__photoWrap">
-                  <img src="./img/img003.png" alt="의료 서비스 상담 장면" class="ts__photo">
+                  <img src="./img/ts009.png"  class="ts__photo">
                 </div>
                 <div class="ts__chartWrap">
                   <div class="ts__miniChart" aria-hidden="true">
                     <div class="ts__bar ts__bar--before"><span>진단 전</span></div>
                     <div class="ts__bar ts__bar--after"><span>진단 후</span>
-                      <em class="ts__badge">승인율<br><b>97%+</b></em>
+                      <em class="ts__badge">자금<br>승인율<br><b>97%+</b></em>
                     </div>
                   </div>
                 </div>
@@ -453,7 +453,7 @@
             </div>
           </li>
           <!-- ========== Slide 10 ========== -->
-          <li class="ts__slide" aria-label="성형외과 원장 후기" id="slide-10">
+          <li class="ts__slide" aria-label="글로벌OO학원 (서XX 원장님) 후기" id="slide-10">
             <div class="ts__grid">
             <!-- 왼쪽 큰 박스: 위/아래 텍스트 시작선과 폭 통일 -->
               <div class="ts__copy">
@@ -476,13 +476,13 @@
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
               <div class="ts__right">
                 <div class="ts__photoWrap">
-                  <img src="./img/img003.png" alt="의료 서비스 상담 장면" class="ts__photo">
+                  <img src="./img/ts010.png"  class="ts__photo">
                 </div>
                 <div class="ts__chartWrap">
                   <div class="ts__miniChart" aria-hidden="true">
                     <div class="ts__bar ts__bar--before"><span>진단 전</span></div>
                     <div class="ts__bar ts__bar--after"><span>진단 후</span>
-                      <em class="ts__badge">승인율<br><b>98%+</b></em>
+                      <em class="ts__badge">자금<br>승인율<br><b>98%+</b></em>
                     </div>
                   </div>
                 </div>
