--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
   <!--섹션2 시작 -->
   <section class="section testimonials" id="testimonial" aria-label="성공 사례">
   <div class="section__head">
-    <h1 class="section__title">5,234건 승인 성공사례!<br>수많은 기업이 신뢰한 정책자금 솔루션<br></h1>
-    <p class="section__desc">정책자금 솔루션과 함께한 대표님들의 리얼 후기를 확인해보세요</p>
+    <h1 class="section__title">5,234건 승인 성공사례!<br>수많은 기업이 신뢰하고 있는<br>정책자금 솔루션<br></h1>
+    <p class="section__desc">대표님들의 리얼 후기를 확인해보세요</p>
   </div>
 
   <div class="section__body">
