--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 </div>
                 <blockquote class="ts__quote">
                   “개발팀과 마케팅팀을 늘려야 하는 중요한 시점에 인건비가 발목을 잡았습니다. 
-                  어디서부터 자금을 마련해야 할지 막막했는데, 정책자금 컨설턴트가 절차를 하나하나 안내해 주셔서 필요한 자금을 조달할 수 있었습니다. 
+                  어디서부터 자금을 마련해야 할지 막막했는데, 정책자금 컨설턴트분이 절차를 하나하나 안내해 주셔서 필요한 자금을 조달할 수 있었습니다. 
                   지금은 개발자와 디자이너를 새로 합류시켜 사업을 본격적으로 확장하고 있습니다.”
                 </blockquote>
               </div>
