--- a/index.html
+++ b/index.html
@@ -518,8 +518,8 @@
 <section class="section promises"  id="proccess" aria-labelledby="promises-title">
   <div class="promises__bg" aria-hidden="true"></div>
   <div class="section__head">
-    <h2 id="promises-title" class="section__title">정책자금 솔루션 간편절차</h2>
-    <p class="section__desc">기업 운영에 꼭 맞는 자금을 빠르게! 복잡함 없이 곧바로 만나보세요.</p>
+    <h2 id="promises-title" class="section__title">정책자금 솔루션 간편한 신청절차</h2>
+    <p class="section__desc">기업 운영에 꼭 맞는 자금을 복잡함 없이 빠르게 만나보세요.</p>
   </div>
 
   <div class="section__body">
@@ -743,11 +743,11 @@
 
   <div class="leadform__wrap">
     <header class="leadform__head">
-      <p class="leadform__count" style="font-size: 20px;">오늘 최대한도&최저금리<br>무료진단 받으신 대표님
+      <p class="leadform__count" style="font-size: 18px;">오늘 최대한도&최저금리<br>무료진단 받으신 대표님
         <strong id="today-count">0</strong>명
       </p>
       <h2 id="leadform-title" class="leadform__title">정책자금 솔루션 무료상담 신청</h2>
-      <p class="leadform__desc" style="font-size: 20px;">
+      <p class="leadform__desc" style="font-size: 18px;">
         대표님 회사에 큰 도움이 될수있게<br>
         언제나 <span style="color: #ffe600;"><b>최대한도, 최저금리</b></span>를 목표로 합니다.<br>
         <span style="color: #ffe600;"><b>97%의 높은 승인율</b></span>을 자랑하는 전문 컨설턴트의<br>
