--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
   <div class="section__head">
     <h2 id="industries-title" class="section__title">업종에 따라 확보 가능한<br>정책자금 규모!</h2>
     <p class="section__desc">
-     업종별 특성과 2025년 하반기 정책방향을 정밀 진단해 최대한도, 초저금리 승인에 최적화된 맞춤 전략을 제공합니다.
+     업종별 특성과 2025년 하반기 정책방향을 정밀 진단해 최대한도, 최저금리 승인에 최적화된 맞춤 전략을 제공합니다.
     </p>
   </div>
 
