--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
 <section class="section promises"  id="proccess" aria-labelledby="promises-title">
   <div class="promises__bg" aria-hidden="true"></div>
   <div class="section__head">
-    <h2 id="promises-title" class="section__title">정책자금 솔루션 간편한 신청절차</h2>
+    <h2 id="promises-title" class="section__title">정책자금 솔루션<br>간편한 신청절차</h2>
     <p class="section__desc">기업 운영에 꼭 맞는 자금을 복잡함 없이 빠르게 만나보세요.</p>
   </div>
 
@@ -622,8 +622,7 @@
     <h3>수천 건의 정책자금 성공 사례가 증명합니다.</h3>
     <p>
       오랜시간 축적된 경험으로 안정적인 자금 연결을 지원합니다.<br>
-      신속하고 체계적인 프로세스로<br>
-      대표님 회사의 긴급한 자금 확보를 확실하게 도와드립니다.
+      신속하고 체계적인 프로세스로 대표님 회사의 긴급한 자금 확보를 확실하게 도와드립니다.
     </p>
   </div>
 </section>
