--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
     <h3>수천 건의 정책자금 성공 사례가 증명합니다.</h3>
     <p>
       오랜시간 축적된 경험으로 안정적인 자금 연결을 지원합니다.<br>
-      신속하고 체계적인 프로세스로 대표님 회사의 긴급한 자금 확보를 확실하게 도와드립니다.
+      신속하고 체계적인 프로세스로 대표님 회사의 자금 확보를 확실하게 도와드립니다.
     </p>
   </div>
 </section>
