--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
   <!-- 1 -->
   <li class="ind__item">
     <div class="ind__circle">
-      <img class="ind__icon" src="./img/industries/retail.png" alt="" />
+      <img class="ind__icon" src="./img/ind001.png" alt="" />
     </div>
     <div class="ind__texts">
       <span class="ind__name">도·소매업</span>
@@ -653,7 +653,7 @@
   <!-- 2 -->
   <li class="ind__item">
     <div class="ind__circle">
-      <img class="ind__icon" src="./img/industries/manufacture.png" alt="" />
+      <img class="ind__icon" src="./img/ind002.png" alt="" />
     </div>
     <div class="ind__texts">
       <span class="ind__name">제조업</span>
@@ -664,7 +664,7 @@
   <!-- 3 -->
   <li class="ind__item">
     <div class="ind__circle">
-      <img class="ind__icon" src="./img/industries/service.png" alt="" />
+      <img class="ind__icon" src="./img/ind003.png" alt="" />
     </div>
     <div class="ind__texts">
       <span class="ind__name">서비스업</span>
@@ -675,7 +675,7 @@
   <!-- 4 -->
   <li class="ind__item">
     <div class="ind__circle">
-      <img class="ind__icon" src="./img/industries/it.png" alt="" />
+      <img class="ind__icon" src="./img/ind004.png" alt="" />
     </div>
     <div class="ind__texts">
       <span class="ind__name">IT 스타트업</span>
@@ -686,7 +686,7 @@
   <!-- 5 -->
   <li class="ind__item">
     <div class="ind__circle">
-      <img class="ind__icon" src="./img/industries/tour.png" alt="" />
+      <img class="ind__icon" src="./img/ind005.png" alt="" />
     </div>
     <div class="ind__texts">
       <span class="ind__name">관광·레저업</span>
@@ -697,7 +697,7 @@
   <!-- 6 -->
   <li class="ind__item">
     <div class="ind__circle">
-      <img class="ind__icon" src="./img/industries/edu.png" alt="" />
+      <img class="ind__icon" src="./img/ind006.png" alt="" />
     </div>
     <div class="ind__texts">
       <span class="ind__name">교육업</span>
@@ -708,7 +708,7 @@
   <!-- 7 -->
   <li class="ind__item">
     <div class="ind__circle">
-      <img class="ind__icon" src="./img/industries/construction.png" alt="" />
+      <img class="ind__icon" src="./img/ind007.png" alt="" />
     </div>
     <div class="ind__texts">
       <span class="ind__name">건설·인테리어</span>
@@ -719,7 +719,7 @@
   <!-- 8 -->
   <li class="ind__item">
     <div class="ind__circle">
-      <img class="ind__icon" src="./img/industries/logistics.png" alt="" />
+      <img class="ind__icon" src="./img/ind008.png" alt="" />
     </div>
     <div class="ind__texts">
       <span class="ind__name">운수·물류업</span>
